# flake8-qa-style

./: .gitignore  README.md  requirements.txt  setup.cfg
flake8_2gis_style/: plugins.py
flake8_2gis_style/visitors/: _visitor_with_filename.py  annotation_visitor.py  assert_visitor.py  function_call_visitor.py
flake8_2gis_style/visitors/call_checkers/: print_checker.py  sleep_checker.py
flake8_qa_style/: plugins.py
tests/: test_annotation.py  test_assert.py  test_print.py  test_sleep.py
